wip fix unit tests