@@ -45,6 +45,10 @@ jar {
     baseName 'corda-confidential-identities'
 }
 
+test {
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+}
 publish {
     name jar.baseName
 }
